auto-video-sink: fix crash when clutter is not initialized

We must prevent sink creation when Clutter's initialization has
failed.

https://bugzilla.gnome.org/show_bug.cgi?id=742279